// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expense summary with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $1.00
  </h2>
</div>
`;

exports[`should correctly render expense summary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    10
     
    expenses
     totalling 
    $100.00
  </h2>
</div>
`;
